[gd_scene load_steps=10 format=2]

[ext_resource path="res://RobotoMono-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GemunuLibre-ExtraLight.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main_Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 60.0
margin_right = 131.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.988235, 0, 1 )
text = "Tetris
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ColorRect"]
modulate = Color( 0.0235294, 0, 1, 1 )
margin_left = 240.0
margin_top = 300.0
margin_right = 390.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.709804, 0, 1, 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="ColorRect"]
modulate = Color( 0.0235294, 0, 1, 1 )
margin_left = 240.0
margin_top = 360.0
margin_right = 390.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.709804, 0, 1, 1 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="ColorRect"]
modulate = Color( 0.0235294, 0, 1, 1 )
margin_left = 240.0
margin_top = 420.0
margin_right = 390.0
margin_bottom = 465.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.709804, 0, 1, 1 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="ColorRect"]
modulate = Color( 0.0235294, 0, 1, 1 )
margin_left = 240.0
margin_top = 480.0
margin_right = 390.0
margin_bottom = 525.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.709804, 0, 1, 1 )
text = "Quit"

[node name="Highscore" type="Label" parent="ColorRect"]
margin_left = 150.0
margin_top = 210.0
margin_right = 480.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.152941, 0.952941, 0.164706, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ColorRect/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="ColorRect/Button4" to="." method="_on_Button4_pressed"]
